--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -15,6 +15,11 @@ section.nl-section.nl-players
                         div.nl-data--text
                             p.title team formats
                             p other details go here
+                    div.nl-players-search
+                        div.input-group
+                            input(type="text" class="form-control" placeholder="Search by player name")
+                            span.input-group-btn
+                                button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
                     ul.nav.nav-tabs(role="tablist")
                         li.nav-item
@@ -126,6 +131,7 @@ section.nl-section.nl-players
                                                 a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
                                                 a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
                                                 a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
+
 
                         div.tab-pane(id="gk" role="tabpanel") TAB2
                         div.tab-pane(id="d" role="tabpanel") TAB3
