--- a/markup/_layouts/_partials/scripts.jade
+++ b/markup/_layouts/_partials/scripts.jade
@@ -3,5 +3,6 @@ script(type="text/javascript" src="assets/js/jquery-3.2.1.min.js")
 script(type="text/javascript" src="assets/js/owl.carousel.min.js")
 script(type="text/javascript" src="assets/js/jquery.fancybox.min.js")
 script(type="text/javascript" src="assets/js/tether.min.js")
+script(type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js")
 script(type="text/javascript" src="assets/js/bootstrap.min.js")
 script(type="text/javascript" src="assets/js/common.js")
