--- a/markup/_layouts/_partials/styles.jade
+++ b/markup/_layouts/_partials/styles.jade
@@ -1,6 +1,8 @@
 //- Contains style link
 link(rel="stylesheet" href="assets/css/jquery.fancybox.min.css")
+link(rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css")
 link(rel="stylesheet" href="assets/css/style.css")
+
 
 
 
