--- a/markup/_scss/base/_typography.scss
+++ b/markup/_scss/base/_typography.scss
@@ -38,7 +38,7 @@ h5{
 a{
   text-decoration: none;
   color: inherit;
-  &:hover{
+  &:hover, &:focus{
     text-decoration: none;
     color: inherit;
   }
