# Home Page: fix footer block # Players Page: add carousel, responsive: in process, custom scroll: in process.

--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -2,6 +2,107 @@ section.nl-section.nl-players
     div.container-fluid
         div.row
             div.col-md-12
+                h1 PLAYERS
+        div.row
+            div.col-md-12
+                div.nl-players-filter-title Filter by lEAgue:
+                div.nl-players-filter
+                    a(href="#")
+                        img(src="assets/img/flag/USA.png" alt="USA")
+                    a(href="#")
+                        img(src="assets/img/flag/Spain.png" alt="Spain")
+                    a(href="#")
+                        img(src="assets/img/flag/Germany.png" alt="Germany")
+                    a(href="#")
+                        img(src="assets/img/flag/France.png" alt="France")
+                    div.btn.btn-primary Reset Filter
+                div.nl-players-filter-title FILTER by team:
+                div.nl-players-filter-caruseul
+                    div.owl-carousel.pl-teams
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FC.png" alt="FC")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCB.png" alt="FCB")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FC.png" alt="FC")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCB.png" alt="FCB")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FC.png" alt="FC")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCB.png" alt="FCB")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FC.png" alt="FC")
+
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FC.png" alt="FC")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCB.png" alt="FCB")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCB.png" alt="FCB")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FC.png" alt="FC")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCB.png" alt="FCB")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/FCBrasil.png" alt="FCBrasil")
+                        div
+                            a(href="#")
+                                img(src="assets/img/emblem/MU.png" alt="MU")
+
+
+
+        div.row
+            div.col-md-12
                 div.nl-players-table
                     div.nl-players-table-data-field
                         div.nl-data--avatar
@@ -15,11 +116,11 @@ section.nl-section.nl-players
                         div.nl-data--text
                             p.title team formats
                             p other details go here
-                    div.nl-players-search
-                        div.input-group
-                            input(type="text" class="form-control" placeholder="Search by player name")
-                            span.input-group-btn
-                                button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
+                        div.nl-players-search
+                            div.input-group
+                                input(type="text" class="form-control" placeholder="Search by player name")
+                                span.input-group-btn
+                                    button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
                     ul.nav.nav-tabs(role="tablist")
                         li.nav-item
@@ -32,6 +133,8 @@ section.nl-section.nl-players
                             a.nav-link(data-toggle="tab" href="#m" role="tab") m
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#a" role="tab") A
+
+
 
                     div.tab-content
                         div.tab-pane.active(id="all" role="tabpanel")
