--- a/markup/_layouts/_partials/footer-log.jade
+++ b/markup/_layouts/_partials/footer-log.jade
@@ -2,7 +2,7 @@
 footer.nl-footer
     div.nl-footer--button
         div.row
-            div.col-lg-9
+            div.col-lg-8
                 div.nl-social-icon
                     a(href="#")
                         <i class="fa fa-facebook-official" aria-hidden="true"></i>
@@ -12,8 +12,8 @@ footer.nl-footer
                         <i class="fa fa-youtube-play" aria-hidden="true"></i>
                     a(href="#")
                         <i class="fa fa-instagram" aria-hidden="true"></i>
-                p Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy
-            div.col-lg-3.nl-tar
+                p <br />Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy<br />
+            div.col-lg-4.nl-tar
                 div.input-group-btn
                     a.btn.btn-footer(htef="#") Forum
                     a.btn.btn-footer(htef="#") Contact Us
