--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -15,7 +15,7 @@ header.nl-header
                         div.btn SIGN UP
 
     div.nl-header--slide
-        div.owl-carousel
+        div.owl-carousel.main-carousel
             div.item.nl-slide
                 div.container-fluid
                     h1 Draft your line up with <br />no limit coins
