--- a/markup/_layouts/_partials/footer.jade
+++ b/markup/_layouts/_partials/footer.jade
@@ -15,7 +15,7 @@ footer.nl-footer
                     a.btn.btn-footer(htef="#") Faq
                     a.btn.btn-footer(htef="#") Terms & Conditions
     div.nl-footer--button
-        div.row
+        div.row.align-items-center
             div.col-lg-9
                 p Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy
             div.col-lg-3.nl-social-icon.nl-tar
