--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -6,7 +6,7 @@ header.nl-header-log
                     div.row.nl-h100
                         div.col-lg-2
                             div.nl-logotype
-                                a(href="#")
+                                a(href="index.html")
                                     img(src="assets/img/logotype.svg" alt="NO Limit")
                         div.col-lg-10.align-self-center
                             div.nl-title The worlds first crypto fantasy sports
