add login modal

--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -2,3 +2,14 @@ section.nl-section.nl-my-teams
     div.container-fluid
         div.row
             div.col-md-12
+                h1 My teams
+        div.row
+            div.col-md-12
+                div.btn.btn-primary.btn-lg Create team
+        div.row
+            div.col-md-12
+                div.status-wrapper
+                    ul
+                        li Playing
+                        li Played
+                        li Not Playing
