--- a/markup/_layouts/index.jade
+++ b/markup/_layouts/index.jade
@@ -22,7 +22,7 @@ html(lang="en")
             include _content/_index/nl-section-learn
 
 
-
+        include _partials/login-modal.jade
         include _partials/footer.jade
         include _partials/scripts.jade
 
