--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -44,10 +44,12 @@
 
 @import "layouts/header-log";
 @import "layouts/footer";
+@import "layouts/login-modal";
 
 
 @import "sections/nl-section";
 @import "sections/nl-players";
+@import "sections/nl-my-teams";
 
 
 
