--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -11,7 +11,7 @@ header.nl-header
                     div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-3
                     div.nl-btutton-login
-                        div.btn.btn-primary.nl-m-r-15 Login
+                        button.btn.btn-primary.nl-m-r-15(type='button', data-toggle='modal', data-target='#loginModal') Login
                         div.btn SIGN UP
 
     div.nl-header--slide
