--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -45,6 +45,7 @@
 @import "layouts/header-log";
 @import "layouts/footer";
 @import "layouts/login-modal";
+@import "layouts/registration-modal";
 
 
 @import "sections/nl-section";
