--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -12,7 +12,7 @@ header.nl-header
                 div.col-12.col-lg-3
                     div.nl-btutton-login
                         button.btn.btn-primary.nl-m-r-15(type='button', data-toggle='modal', data-target='#loginModal') Login
-                        div.btn SIGN UP
+                        div.btn(type='button', data-toggle='modal', data-target='#registrationModal') SIGN UP
 
     div.nl-header--slide
         div.owl-carousel.main-carousel
