--- a/markup/_layouts/_partials/login-modal.jade
+++ b/markup/_layouts/_partials/login-modal.jade
@@ -2,7 +2,7 @@
     .modal-dialog(role='document')
         .modal-content
             .modal-header
-                h2#exampleModalLabel.modal-title Login
+                h2#loginModalLabel.modal-title Login
                 button.close(type='button', data-dismiss='modal', aria-label='Close')
                     span(aria-hidden='true')
             .modal-body
@@ -11,7 +11,7 @@
                         input#inputEmail.form-control(type='email', placeholder='SCREEN NAME OR EMAIL', required='', autofocus='')
                     .input-group
                         input.form-control(type='password', placeholder='PASSWORD', aria-describedby='show')
-                        span#show.input-group-addon show
+                        span.show-password.input-group-addon show
 
                     a(href="#") FORGOT MY PASSWORD
 
