--- a/markup/_layouts/_partials/scripts.jade
+++ b/markup/_layouts/_partials/scripts.jade
@@ -1,4 +1,5 @@
 //- Contains Script Links
+script(src='https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit', async='', defer='')
 script(type="text/javascript" src="assets/js/jquery-3.2.1.min.js")
 script(type="text/javascript" src="assets/js/owl.carousel.min.js")
 script(type="text/javascript" src="assets/js/jquery.fancybox.min.js")
