--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -48,11 +48,15 @@
 @import "layouts/registration-modal";
 
 
+
+
+
+
 @import "sections/nl-section";
 @import "sections/nl-players";
 @import "sections/nl-my-teams";
 
-
+@import "elements/nl-theme-selector";
 
 
 
