--- a/markup/_scss/layouts/_login-modal.scss
+++ b/markup/_scss/layouts/_login-modal.scss
@@ -12,26 +12,26 @@
 #loginModal {
 
   .modal-content {
-    border-radius: .5rem;
+    border-radius: calculateRem(8px);
   }
   .modal-header {
     border-top-right-radius: .3rem;
     border-top-left-radius: .3rem;
     background-color: #fb8700;
     color: #fff;
-    padding: 50px 0;
+    padding: calculateRem(50px) 0;
 
     h2 {
       margin: 0 auto;
-      font-size: 65px;
+      font-size: calculateRem(65px);
     }
     .close {
       background: url(../img/close_btn.png);
       position: absolute;
-      top: 36px;
-      right: 20px;
-      height: 49px;
-      width: 49px;
+      top: calculateRem(36px);
+      right: calculateRem(20px);
+      height: calculateRem(49px);
+      width: calculateRem(49px);
       opacity: 1;
       outline: none;
     }
@@ -45,16 +45,16 @@
   }
 
   .modal-body {
-    padding: 72px 100px 0;
+    padding: calculateRem(72px) calculateRem(100px) 0;
     @include respond-to(allsmall){
-      padding: 72px 20px 0;
+      padding: calculateRem(72px) calculateRem(20px) 0;
     }
     input {
-      height: 60px;
-      width: 642px;
+      height: calculateRem(60px);
+      width: calculateRem(642px);
       border-radius: 0;
-      font-size: 20px;
-      margin-bottom: 20px;
+      font-size: calculateRem(20px);
+      margin-bottom: calculateRem(20px);
       @include respond-to(allsmall){
         width: 100%;
       }
@@ -69,7 +69,7 @@
       user-select: none;
       position: absolute;
       top: 50%;
-      right: 15px;
+      right: calculateRem(15px);
       transform: translate(0, -50%);
       color: #fb8700;
       cursor: pointer;
@@ -81,14 +81,14 @@
     }
   }
   .modal-footer {
-    padding: 58px 0;
+    padding: calculateRem(58px) 0;
     border-bottom-right-radius: .3rem;
     border-bottom-left-radius: .3rem;
 
     button {
-      width: 278px;
+      width: calculateRem(278px);
       margin: 0 auto;
-      font-size: 28.61px;
+      font-size: calculateRem(28.61px);
     }
   }
 
@@ -96,7 +96,7 @@
 
 @media (min-width: 576px) {
   .modal-dialog {
-    max-width: 842px;
+    max-width: calculateRem(842px);
   }
 }
 
