# Home Page: modal add responsive and custom select

--- a/markup/_layouts/_partials/registration-modal.jade
+++ b/markup/_layouts/_partials/registration-modal.jade
@@ -26,7 +26,7 @@
                         input#lastName.form-control(placeholder='LAST NAME', required='', autofocus='')
 
                     .input-group
-                        select#country.form-control(placeholder='COUNTRY', required='')
+                        select#country.form-control.custom-select(placeholder='COUNTRY', required='')
                             option(selected='' disabled='' hidden='') COUNTRY
                             option USA
                             option CANADA
